# Bisleri

./: .gitignore  Info.md  README.md  Rangaayan.pptx  architecture.md  bts.jsonc  package.json
ai/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
ai/routers/: competitors.py  demand.py  describe.py  detection.py  pricing.py
ai/scrapers/: marketplace.py  web_search.py
ai/services/: ai_pricing.py  demand_insights.py  description.py  llm_client.py  object_detection.py
ai/training/: bisleri_product_detection.ipynb  download_datasets.py  train_product_detector.py
apps/web/: next.config.ts  package.json
apps/web/src/: index.css  proxy.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/dashboard/: dashboard.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/marketplace/: page.tsx
apps/web/src/app/messages/: messages-client.tsx  page.tsx
apps/web/src/app/onboarding/: onboarding.tsx  page.tsx
apps/web/src/app/shg/: layout.tsx
apps/web/src/components/: dashboard-layout.tsx  footer.tsx  header.tsx  language-toggle.tsx  loader.tsx  mode-toggle.tsx  providers.tsx  sign-in-form.tsx  sign-up-form.tsx  user-menu.tsx
apps/web/src/components/chat/: conversation-row.tsx  message-bubble.tsx  message-input.tsx
apps/web/src/components/ui/: brain-circuit-icon.tsx  camera-icon.tsx  category-picker.tsx  chart-line-icon.tsx  demand-meter.tsx  loading-icon.tsx  (+7 more)
apps/web/src/lib/: auth-client.ts  constants.ts  parse-ai.ts  session.ts  use-ai-stream.ts  use-chat-poll.ts
runs/detect/runs/bisleri_products/: args.yaml
(+58 files in other folders)
